--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             <div class="petal petal3"></div>
             <div class="petal petal4"></div>
             <div class="center"></div>
+            <div class="heart heart1"></div>
+            <div class="heart heart2"></div>
+            <div class="heart heart3"></div>
+            <div class="heart heart4"></div>
+            <div class="heart heart5"></div>
+
         </div>
         <button onclick="growFlower()">Hacer crecer la flor</button>
         <p id="message"></p>
